--- a/src/app/launch/launch.component.html
+++ b/src/app/launch/launch.component.html
@@ -3,8 +3,8 @@
 
 
     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 left-div">
-        <h2>Launch History:</h2>
-        <hr>
+      <h2>Launch History:</h2>
+      <hr>
       <div class="launch-scroller">
         <ul>
           <li *ngFor="let launch of launch$">
@@ -13,23 +13,27 @@
         </ul>
       </div>
       <div class="spacex-img">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/SpaceX-Logo.svg/2000px-SpaceX-Logo.svg.png" alt="No img">
+        <img src="http://res.cloudinary.com/dacxbqrp3/image/upload/v1531417702/SpaceX-Logo.svg_xpoxfj.png" alt="No img">
       </div>
     </div>
 
     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 right-div">
-      <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/39980-200.png" alt="No img">
-      <p class="future-text">Hello <span id="blue">Cadets!</span></p>
+      <img src="http://res.cloudinary.com/dacxbqrp3/image/upload/v1531417698/39980-200_kioydl.png" alt="No img">
+      <p class="future-text">Hello
+        <span id="blue">Cadets!</span>
+      </p>
 
-      <p class="future-text">This project is in no way affiliated with <span id="blue">SpaceX</span>.</p>
+      <p class="future-text">This project is in no way affiliated with
+        <span id="blue">SpaceX</span>.</p>
 
-      <p class="future-text"><span id="blue">Click</span> on any launch for <span id="blue">more</span> details!</p>
-      <p>Powered by <a href="https://github.com/r-spacex/SpaceX-API">r/spaceX SpaceX-API</a></p>
+      <p class="future-text">
+        <span id="blue">Click</span> on any launch for
+        <span id="blue">more</span> details!</p>
+      <p>Powered by
+        <a href="https://github.com/r-spacex/SpaceX-API">r/spaceX SpaceX-API</a>
+      </p>
     </div>
 
 
   </div>
 </div>
-
-
-
